fix overflow issue

--- a/pages/landing/components/Glimpse/styles.styl
+++ b/pages/landing/components/Glimpse/styles.styl
@@ -9,6 +9,7 @@
   border: 1px solid $conjureColorMain
   border-radius: 3px
   box-shadow: 0 0.2rem 0.6rem rgba(#000, 0.36)
+  overflow: hidden
 
   .toolbar
     display: block
